# jkpython

./: .gitignore  jj.py  jk.py  jktyping.py  maskfile.md  pyproject.toml
tests/: conftest.py  test_jk.py
