[tool.poetry]
name = "jkp"
version = "0.1.0"
description = ""
authors = ["aaaaninja <aaaaninja@aaaa.ninja>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
